--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -7,8 +7,8 @@
 :root {
   --yellow: #FFE600;
   --black: #333333;
-  --grey: #666666;
-  --light-grey: #999999;
+  --gray: #666666;
+  --light-gray: #999999;
   --white: #EEEEEE;
   --blue: #3483FA;
   --max-width: 979px;
