--- a/src/components/Item/item.module.css
+++ b/src/components/Item/item.module.css
@@ -1,17 +1,18 @@
+.itemLink {
+  text-decoration: none;
+}
+
 .item {
   width: 100%;
   display: grid;
   grid-template-columns: auto 3fr 1fr;
   flex: 1;
   gap: 16px;
-  border-bottom: 1px solid var(--white);
+  border-bottom: 2px solid var(--white);
   padding: 16px;
   background: white;
 }
 
-.item:last-child {
-  border-bottom: none;
-}
 
 .itemImage {
   width: 180px;
@@ -48,6 +49,7 @@
 .itemConditionContainer {
   display: flex;
   align-items: start;
+  justify-content: center;
   padding-top: 34px;
   font-size: 12px;
   color: var(--gray);
