--- a/src/components/Item/item.module.css
+++ b/src/components/Item/item.module.css
@@ -19,7 +19,7 @@
   height: 180px;
   object-fit: fill;
   border-radius: 4px;
-  background-color: red;
+  background-color: var(--white);
 }
 
 .itemTitleContainer {
